haswell flush llc buffer and L2 attack

--- a/apps/side-bench/Kconfig
+++ b/apps/side-bench/Kconfig
@@ -42,6 +42,9 @@ menu   "Timing Channel Benchmarks"
                config BENCH_CACHE_FLUSH_ALL_CACHES 
                bool "probing LLC buffer"
 
+               config BENCH_CACHE_FLUSH_L2_CACHES
+               bool "L2 attack (x86 only)"
+
           endchoice
               
         config BENCH_DCACHE_ATTACK 
