ipc bench config sabre

--- a/configs/sabre_ipc_kernel_defconfig
+++ b/configs/sabre_ipc_kernel_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Project Configuration
-# Tue Sep 18 14:01:48 2018
+# Tue Sep 18 14:07:51 2018
 #
 
 #
@@ -96,7 +96,11 @@ CONFIG_NO_BENCHMARKS=y
 # CONFIG_BENCHMARK_TRACK_KERNEL_ENTRIES is not set
 # CONFIG_BENCHMARK_TRACEPOINTS is not set
 # CONFIG_BENCHMARK_TRACK_UTILISATION is not set
-# CONFIG_MULTI_KERNEL_IMAGES is not set
+CONFIG_MULTI_KERNEL_IMAGES=y
+# CONFIG_KERNEL_SWITCH_FLUSH is not set
+# CONFIG_DETERMINISTIC_KERNEL_SWITCH is not set
+# CONFIG_LOAD_KERNEL_SHARED_DATA is not set
+# CONFIG_KERNEL_INT_MASK is not set
 # CONFIG_KERNEL_SWITCH_COST_BENCH is not set
 # CONFIG_ENABLE_GLOBAL_TIMER is not set
 
