--- a/configs/haswell_ipc_kernel_defconfig
+++ b/configs/haswell_ipc_kernel_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Project Configuration
-# Thu Jun 14 12:00:47 2018
+# Tue Sep 18 15:05:52 2018
 #
 
 #
@@ -115,7 +115,6 @@ CONFIG_MULTI_KERNEL_IMAGES=y
 # CONFIG_KERNEL_SWITCH_FLUSH is not set
 # CONFIG_DETERMINISTIC_KERNEL_SWITCH is not set
 # CONFIG_LOAD_KERNEL_SHARED_DATA is not set
-# CONFIG_INT_TASK_PRIORITY is not set
 # CONFIG_KERNEL_INT_MASK is not set
 # CONFIG_KERNEL_SWITCH_COST_BENCH is not set
 
@@ -137,6 +136,7 @@ CONFIG_BENCH_IPC=y
 # CONFIG_BENCH_PMU_COUNTER is not set
 # CONFIG_BENCH_COVERT is not set
 # CONFIG_MASTIK_ATTACK is not set
+# CONFIG_BENCH_SPLASH is not set
 
 #
 # Manager task for benchmarking tests
@@ -144,13 +144,17 @@ CONFIG_BENCH_IPC=y
 CONFIG_APP_MANAGER=y
 CONFIG_BENCH_UNTYPE_COUNT=40
 CONFIG_BENCH_UNTYPE_SIZEBITS=14
-CONFIG_MANAGER_MITIGATION=y
+# CONFIG_MANAGER_MITIGATION is not set
+# CONFIG_MANAGER_COLOUR_ONLY is not set
+# CONFIG_MANAGER_UNCOLOUR_KERNEL is not set
 CONFIG_MANAGER_IPC=y
-# CONFIG_MANAGER_IPC_SAME_COLOUR is not set
+# CONFIG_MANAGER_CACHE_DIV_UNEVEN is not set
+# CONFIG_MANAGER_CACHE_DIV_LLC is not set
 # CONFIG_MANAGER_PMU_COUNTER is not set
 # CONFIG_MANAGER_CACHE_FLUSH is not set
 # CONFIG_MANAGER_FUNC_TESTS is not set
 # CONFIG_MANAGER_COVERT_BENCH is not set
+# CONFIG_MANAGER_SPLASH_BENCH is not set
 # CONFIG_MANAGER_HUGE_PAGES is not set
 
 #
