--- a/configs/haswell_tlb_colour_prefetch_defconfig
+++ b/configs/haswell_tlb_colour_prefetch_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Project Configuration
-# Tue Sep 18 15:01:13 2018
+# Tue Sep 18 15:32:53 2018
 #
 
 #
@@ -65,23 +65,23 @@ CONFIG_MULTIBOOT_GRAPHICS_MODE_NONE=y
 # CONFIG_KERNEL_SKIM_WINDOW is not set
 # CONFIG_EXPORT_PMC_USER is not set
 # CONFIG_KERNEL_X86_DANGEROUS_MSR is not set
-CONFIG_KERNEL_X86_IBRS_NONE=y
-# CONFIG_KERNEL_X86_IBRS_BASIC is not set
+# CONFIG_KERNEL_X86_IBRS_NONE is not set
+CONFIG_KERNEL_X86_IBRS_BASIC=y
 # CONFIG_KERNEL_X86_IBRS_ALL is not set
-# CONFIG_KERNEL_X86_IBPB_ON_CONTEXT_SWITCH is not set
-# CONFIG_KERNEL_X86_RSB_ON_CONTEXT_SWITCH is not set
+CONFIG_KERNEL_X86_IBPB_ON_CONTEXT_SWITCH=y
+CONFIG_KERNEL_X86_RSB_ON_CONTEXT_SWITCH=y
 
 #
 # seL4 System Parameters
 #
 CONFIG_ROOT_CNODE_SIZE_BITS=19
-CONFIG_TIMER_TICK_MS=1000
+CONFIG_TIMER_TICK_MS=1
 CONFIG_TIME_SLICE=1
 CONFIG_RETYPE_FAN_OUT_LIMIT=256
 CONFIG_MAX_NUM_WORK_UNITS_PER_PREEMPTION=100
 CONFIG_RESET_CHUNK_BITS=8
 CONFIG_MAX_NUM_BOOTINFO_UNTYPED_CAPS=256
-CONFIG_FASTPATH=y
+# CONFIG_FASTPATH is not set
 CONFIG_NUM_DOMAINS=1
 CONFIG_DOMAIN_SCHEDULE=""
 CONFIG_NUM_PRIORITIES=256
@@ -111,7 +111,13 @@ CONFIG_NO_BENCHMARKS=y
 # CONFIG_BENCHMARK_TRACK_KERNEL_ENTRIES is not set
 # CONFIG_BENCHMARK_TRACEPOINTS is not set
 # CONFIG_BENCHMARK_TRACK_UTILISATION is not set
-# CONFIG_MULTI_KERNEL_IMAGES is not set
+CONFIG_MULTI_KERNEL_IMAGES=y
+CONFIG_KERNEL_SWITCH_FLUSH=y
+# CONFIG_FLUSH_CACHE_L1_DCACHE_WRITE is not set
+CONFIG_DETERMINISTIC_KERNEL_SWITCH=y
+CONFIG_KERNEL_HOLD_TICK_LENGTH=3600
+CONFIG_LOAD_KERNEL_SHARED_DATA=y
+CONFIG_KERNEL_INT_MASK=y
 # CONFIG_KERNEL_SWITCH_COST_BENCH is not set
 
 #
@@ -128,9 +134,19 @@ CONFIG_NO_BENCHMARKS=y
 CONFIG_APP_SIDE_BENCH=y
 # CONFIG_BENCH_CACHE_FLUSH is not set
 # CONFIG_BENCH_DCACHE_ATTACK is not set
-CONFIG_BENCH_IPC=y
+# CONFIG_BENCH_IPC is not set
 # CONFIG_BENCH_PMU_COUNTER is not set
-# CONFIG_BENCH_COVERT is not set
+CONFIG_BENCH_COVERT=y
+# CONFIG_BENCH_COVERT_L1D is not set
+# CONFIG_BENCH_COVERT_L1I is not set
+# CONFIG_BENCH_COVERT_L2 is not set
+# CONFIG_BENCH_COVERT_LLC_KERNEL_SCHEDULE is not set
+CONFIG_BENCH_COVERT_TLB=y
+# CONFIG_BENCH_COVERT_BTB is not set
+# CONFIG_BENCH_COVERT_BP is not set
+# CONFIG_BENCH_COVERT_TIMER is not set
+# CONFIG_BENCH_COVERT_LLC_KERNEL is not set
+CONFIG_BENCH_DATA_POINTS=1024000
 # CONFIG_MASTIK_ATTACK is not set
 # CONFIG_BENCH_SPLASH is not set
 
@@ -140,17 +156,18 @@ CONFIG_BENCH_IPC=y
 CONFIG_APP_MANAGER=y
 CONFIG_BENCH_UNTYPE_COUNT=40
 CONFIG_BENCH_UNTYPE_SIZEBITS=14
-# CONFIG_MANAGER_MITIGATION is not set
+CONFIG_MANAGER_MITIGATION=y
 # CONFIG_MANAGER_COLOUR_ONLY is not set
 # CONFIG_MANAGER_UNCOLOUR_KERNEL is not set
-CONFIG_MANAGER_IPC=y
+# CONFIG_MANAGER_IPC is not set
 # CONFIG_MANAGER_CACHE_DIV_UNEVEN is not set
 # CONFIG_MANAGER_CACHE_DIV_LLC is not set
 # CONFIG_MANAGER_PMU_COUNTER is not set
 # CONFIG_MANAGER_CACHE_FLUSH is not set
 # CONFIG_MANAGER_FUNC_TESTS is not set
-# CONFIG_MANAGER_COVERT_BENCH is not set
+CONFIG_MANAGER_COVERT_BENCH=y
 # CONFIG_MANAGER_SPLASH_BENCH is not set
+# CONFIG_MANAGER_DCACHE_ATTACK is not set
 # CONFIG_MANAGER_HUGE_PAGES is not set
 
 #
