--- a/configs/haswell_l1i_colour_prefetch_defconfig
+++ b/configs/haswell_l1i_colour_prefetch_defconfig
@@ -1,59 +1,75 @@
 #
 # Automatically generated make config: don't edit
 # Project Configuration
-# Wed Jul 11 14:38:23 2018
+# Tue Sep 18 15:32:05 2018
 #
 
 #
 # seL4 Kernel
 #
 # CONFIG_ARCH_ARM_V6 is not set
-CONFIG_ARCH_ARM_V7A=y
+# CONFIG_ARCH_ARM_V7A is not set
 # CONFIG_ARCH_ARM_V8A is not set
 CONFIG_HAVE_FPU=y
 CONFIG_KERNEL_MASTER=y
-CONFIG_WORD_SIZE=32
+CONFIG_WORD_SIZE=64
 
 #
 # seL4 System
 #
-# CONFIG_ARCH_X86 is not set
-CONFIG_ARCH_ARM=y
+CONFIG_ARCH_X86=y
+# CONFIG_ARCH_ARM is not set
 # CONFIG_ARCH_RISCV is not set
-# CONFIG_ARCH_AARCH64 is not set
-CONFIG_ARCH_AARCH32=y
+CONFIG_ARCH_X86_64=y
 # CONFIG_ARM1136JF_S is not set
 # CONFIG_ARM_CORTEX_A7 is not set
 # CONFIG_ARM_CORTEX_A8 is not set
-CONFIG_ARM_CORTEX_A9=y
+# CONFIG_ARM_CORTEX_A9 is not set
 # CONFIG_ARM_CORTEX_A15 is not set
 # CONFIG_ARM_CORTEX_A53 is not set
 # CONFIG_ARM_CORTEX_A57 is not set
 # CONFIG_PLAT_EXYNOS5 is not set
 # CONFIG_PLAT_EXYNOS54XX is not set
-CONFIG_PLAT_IMX6=y
+# CONFIG_PLAT_IMX6 is not set
 # CONFIG_PLAT_IMX7 is not set
-# CONFIG_PLAT_KZM is not set
-# CONFIG_PLAT_OMAP3 is not set
-# CONFIG_PLAT_AM335X is not set
-# CONFIG_PLAT_EXYNOS4 is not set
-# CONFIG_PLAT_EXYNOS5410 is not set
-# CONFIG_PLAT_EXYNOS5422 is not set
-# CONFIG_PLAT_EXYNOS5250 is not set
-# CONFIG_PLAT_APQ8064 is not set
-CONFIG_PLAT_SABRE=y
-# CONFIG_PLAT_WANDQ is not set
-# CONFIG_PLAT_IMX7_SABRE is not set
-# CONFIG_PLAT_ZYNQ7000 is not set
-# CONFIG_PLAT_ZYNQMP is not set
-# CONFIG_PLAT_ALLWINNERA20 is not set
-# CONFIG_PLAT_TK1 is not set
-# CONFIG_PLAT_HIKEY is not set
-# CONFIG_PLAT_BCM2837 is not set
-CONFIG_ENABLE_A9_PREFETCHER=y
-CONFIG_EXPORT_PMU_USER=y
-# CONFIG_IPC_BUF_GLOBALS_FRAME is not set
-CONFIG_IPC_BUF_TPIDRURW=y
+CONFIG_PLAT_PC99=y
+
+#
+# System Interrupt Management
+#
+# CONFIG_IRQ_PIC is not set
+CONFIG_IRQ_IOAPIC=y
+CONFIG_MAX_NUM_IOAPIC=1
+# CONFIG_XAPIC is not set
+CONFIG_X2APIC=y
+# CONFIG_IOMMU is not set
+# CONFIG_VTX is not set
+CONFIG_HUGE_PAGE=y
+CONFIG_SUPPORT_PCID=y
+# CONFIG_SYSENTER is not set
+CONFIG_SYSCALL=y
+CONFIG_FXSAVE=y
+# CONFIG_XSAVE is not set
+CONFIG_XSAVE_SIZE=512
+# CONFIG_FSGSBASE_MSR is not set
+CONFIG_FSGSBASE_INST=y
+
+#
+# Multiboot options
+#
+CONFIG_MULTIBOOT1_HEADER=y
+CONFIG_MULTIBOOT2_HEADER=y
+CONFIG_MULTIBOOT_GRAPHICS_MODE_NONE=y
+# CONFIG_MULTIBOOT_GRAPHICS_MODE_TEXT is not set
+# CONFIG_MULTIBOOT_GRAPHICS_MODE_LINEAR is not set
+# CONFIG_KERNEL_SKIM_WINDOW is not set
+# CONFIG_EXPORT_PMC_USER is not set
+# CONFIG_KERNEL_X86_DANGEROUS_MSR is not set
+# CONFIG_KERNEL_X86_IBRS_NONE is not set
+CONFIG_KERNEL_X86_IBRS_BASIC=y
+# CONFIG_KERNEL_X86_IBRS_ALL is not set
+CONFIG_KERNEL_X86_IBPB_ON_CONTEXT_SWITCH=y
+CONFIG_KERNEL_X86_RSB_ON_CONTEXT_SWITCH=y
 
 #
 # seL4 System Parameters
@@ -65,13 +81,13 @@ CONFIG_RETYPE_FAN_OUT_LIMIT=256
 CONFIG_MAX_NUM_WORK_UNITS_PER_PREEMPTION=100
 CONFIG_RESET_CHUNK_BITS=8
 CONFIG_MAX_NUM_BOOTINFO_UNTYPED_CAPS=256
-CONFIG_FASTPATH=y
+# CONFIG_FASTPATH is not set
 CONFIG_NUM_DOMAINS=1
 CONFIG_DOMAIN_SCHEDULE=""
 CONFIG_NUM_PRIORITIES=256
 CONFIG_MAX_NUM_NODES=1
+CONFIG_CACHE_LN_SZ=64
 CONFIG_KERNEL_STACK_BITS=12
-CONFIG_AARCH32_FPU_ENABLE_CONTEXT_SWITCH=y
 CONFIG_FPU_MAX_RESTORES_SINCE_SWITCH=64
 
 #
@@ -87,9 +103,8 @@ CONFIG_FPU_MAX_RESTORES_SINCE_SWITCH=64
 CONFIG_OPTIMISATION_O2=y
 # CONFIG_OPTIMISATION_O3 is not set
 CONFIG_DANGEROUS_CODE_INJECTION=y
-# CONFIG_DEBUG_DISABLE_L2_CACHE is not set
-# CONFIG_DEBUG_DISABLE_BRANCH_PREDICTION is not set
 # CONFIG_FLUSH_CORE_STATES is not set
+# CONFIG_DEBUG_DISABLE_PREFETCHERS is not set
 # CONFIG_ENABLE_BENCHMARKS is not set
 CONFIG_NO_BENCHMARKS=y
 # CONFIG_BENCHMARK_GENERIC is not set
@@ -97,11 +112,12 @@ CONFIG_NO_BENCHMARKS=y
 # CONFIG_BENCHMARK_TRACEPOINTS is not set
 # CONFIG_BENCHMARK_TRACK_UTILISATION is not set
 CONFIG_MULTI_KERNEL_IMAGES=y
-# CONFIG_KERNEL_SWITCH_FLUSH is not set
-# CONFIG_DETERMINISTIC_KERNEL_SWITCH is not set
-# CONFIG_LOAD_KERNEL_SHARED_DATA is not set
-# CONFIG_INT_TASK_PRIORITY is not set
-# CONFIG_KERNEL_INT_MASK is not set
+CONFIG_KERNEL_SWITCH_FLUSH=y
+# CONFIG_FLUSH_CACHE_L1_DCACHE_WRITE is not set
+CONFIG_DETERMINISTIC_KERNEL_SWITCH=y
+CONFIG_KERNEL_HOLD_TICK_LENGTH=3600
+CONFIG_LOAD_KERNEL_SHARED_DATA=y
+CONFIG_KERNEL_INT_MASK=y
 # CONFIG_KERNEL_SWITCH_COST_BENCH is not set
 
 #
@@ -118,10 +134,23 @@ CONFIG_MULTI_KERNEL_IMAGES=y
 CONFIG_APP_SIDE_BENCH=y
 # CONFIG_BENCH_CACHE_FLUSH is not set
 # CONFIG_BENCH_DCACHE_ATTACK is not set
-CONFIG_BENCH_IPC=y
+# CONFIG_BENCH_IPC is not set
 # CONFIG_BENCH_PMU_COUNTER is not set
-# CONFIG_BENCH_COVERT is not set
+CONFIG_BENCH_COVERT=y
+# CONFIG_BENCH_COVERT_L1D is not set
+CONFIG_BENCH_COVERT_L1I=y
+# CONFIG_BENCH_COVERT_L2 is not set
+# CONFIG_BENCH_COVERT_LLC_KERNEL_SCHEDULE is not set
+# CONFIG_BENCH_COVERT_TLB is not set
+# CONFIG_BENCH_COVERT_BTB is not set
+# CONFIG_BENCH_COVERT_BP is not set
+# CONFIG_BENCH_COVERT_TIMER is not set
+# CONFIG_BENCH_COVERT_LLC_KERNEL is not set
+CONFIG_BENCH_DATA_POINTS=1024000
+# CONFIG_BENCH_COVERT_L1I_REWRITE is not set
+# CONFIG_BENCH_COVERT_L1I_PROB_VADDR is not set
 # CONFIG_MASTIK_ATTACK is not set
+# CONFIG_BENCH_SPLASH is not set
 
 #
 # Manager task for benchmarking tests
@@ -130,12 +159,17 @@ CONFIG_APP_MANAGER=y
 CONFIG_BENCH_UNTYPE_COUNT=40
 CONFIG_BENCH_UNTYPE_SIZEBITS=14
 CONFIG_MANAGER_MITIGATION=y
-CONFIG_MANAGER_IPC=y
-# CONFIG_MANAGER_IPC_SAME_COLOUR is not set
+# CONFIG_MANAGER_COLOUR_ONLY is not set
+# CONFIG_MANAGER_UNCOLOUR_KERNEL is not set
+# CONFIG_MANAGER_IPC is not set
+# CONFIG_MANAGER_CACHE_DIV_UNEVEN is not set
+# CONFIG_MANAGER_CACHE_DIV_LLC is not set
 # CONFIG_MANAGER_PMU_COUNTER is not set
 # CONFIG_MANAGER_CACHE_FLUSH is not set
 # CONFIG_MANAGER_FUNC_TESTS is not set
-# CONFIG_MANAGER_COVERT_BENCH is not set
+CONFIG_MANAGER_COVERT_BENCH=y
+# CONFIG_MANAGER_SPLASH_BENCH is not set
+# CONFIG_MANAGER_DCACHE_ATTACK is not set
 # CONFIG_MANAGER_HUGE_PAGES is not set
 
 #
@@ -155,9 +189,9 @@ CONFIG_LIB_MUSL_C=y
 CONFIG_HAVE_LIBC=y
 CONFIG_HAVE_CRT=y
 CONFIG_LIB_SEL4_MUSLC_SYS=y
-CONFIG_LIB_SEL4_MUSLC_SYS_MORECORE_BYTES=20971520
+CONFIG_LIB_SEL4_MUSLC_SYS_MORECORE_BYTES=41943040
 # CONFIG_LIB_SEL4_MUSLC_SYS_DEBUG_HALT is not set
-CONFIG_LIB_SEL4_MUSLC_SYS_CPIO_FS=y
+# CONFIG_LIB_SEL4_MUSLC_SYS_CPIO_FS is not set
 # CONFIG_LIB_SEL4_MUSLC_SYS_ARCH_PUTCHAR_WEAK is not set
 CONFIG_HAVE_LIB_SEL4_MUSLC_SYS=y
 CONFIG_LIB_SEL4_VKA=y
@@ -194,10 +228,15 @@ CONFIG_LIB_UTILS=y
 CONFIG_LIB_UTILS_DEFAULT_ZF_LOG_LEVEL=5
 CONFIG_HAVE_LIB_UTILS=y
 CONFIG_LIB_PLATSUPPORT=y
+CONFIG_LIB_PLAT_SUPPORT_SERIAL_PORT_X86_COM1=y
+# CONFIG_LIB_PLAT_SUPPORT_SERIAL_PORT_X86_COM2 is not set
+# CONFIG_LIB_PLAT_SUPPORT_SERIAL_PORT_X86_COM3 is not set
+# CONFIG_LIB_PLAT_SUPPORT_SERIAL_PORT_X86_COM4 is not set
+# CONFIG_LIB_PLAT_SUPPORT_SERIAL_TEXT_EGA is not set
 CONFIG_HAVE_LIB_PLATSUPPORT=y
 CONFIG_LIB_SEL4_CACHECOLOURING=y
-CONFIG_NUM_CACHE_COLOURS=16
-CONFIG_COLOUR_ALLOC_SIZEBITS=16
+CONFIG_NUM_CACHE_COLOURS=8
+CONFIG_COLOUR_ALLOC_SIZEBITS=15
 CONFIG_COLOUR_MSPACE_RESERVES=30
 CONFIG_LIB_SEL4_DEBUG=y
 CONFIG_LIBSEL4DEBUG_ALLOC_BUFFER_ENTRIES=128
@@ -209,28 +248,18 @@ CONFIG_HAVE_LIB_SEL4_DEBUG=y
 #
 # Tools
 #
-CONFIG_LIB_ELFLOADER=y
-# CONFIG_IMAGE_BINARY is not set
-CONFIG_IMAGE_ELF=y
-# CONFIG_ARM_NS_SUPERVISOR_MODE is not set
-CONFIG_ARM_S_SUPERVISOR_MODE=y
-# CONFIG_ARM_MONITOR_MODE is not set
-CONFIG_REMOVE_SYMBOLS=y
-# CONFIG_HASH_INSTRUCTIONS is not set
-# CONFIG_ARM_MONITOR_HOOK is not set
-CONFIG_ARM_ERRATA_764369=y
 
 #
 # Toolchain Options
 #
-CONFIG_CROSS_COMPILER_PREFIX="arm-none-eabi-"
+CONFIG_CROSS_COMPILER_PREFIX=""
 # CONFIG_USE_RUST is not set
 CONFIG_KERNEL_COMPILER=""
 CONFIG_KERNEL_CFLAGS=""
 CONFIG_KERNEL_EXTRA_CPPFLAGS=""
 CONFIG_USER_COMPILER=""
 # CONFIG_USER_DEBUG_INFO is not set
-CONFIG_USER_EXTRA_CFLAGS="-D_XOPEN_SOURCE=700 -Wl,-z,max-page-size=0x1000"
+CONFIG_USER_EXTRA_CFLAGS=""
 CONFIG_USER_CFLAGS=""
 CONFIG_BUILDSYS_USE_CCACHE=y
 # CONFIG_USER_OPTIMISATION_Os is not set
@@ -244,3 +273,11 @@ CONFIG_USER_OPTIMISATION_O2=y
 CONFIG_USER_DEBUG_BUILD=y
 # CONFIG_USER_LINKER_GC_SECTIONS is not set
 # CONFIG_BUILDSYS_CPP_SEPARATE is not set
+# CONFIG_ARCH_X86_GENERIC is not set
+CONFIG_ARCH_X86_NEHALEM=y
+# CONFIG_ARCH_X86_WESTMERE is not set
+# CONFIG_ARCH_X86_SANDY is not set
+# CONFIG_ARCH_X86_IVY is not set
+# CONFIG_ARCH_X86_HASWELL is not set
+# CONFIG_ARCH_X86_BROADWELL is not set
+# CONFIG_ARCH_X86_SKYLAKE is not set
