--- a/configs/sabre_llc_kimage_single_defconfig
+++ b/configs/sabre_llc_kimage_single_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Project Configuration
-# Mon Aug 20 11:04:01 2018
+# Mon Sep 24 15:46:15 2018
 #
 
 #
@@ -50,7 +50,7 @@ CONFIG_PLAT_SABRE=y
 # CONFIG_PLAT_TK1 is not set
 # CONFIG_PLAT_HIKEY is not set
 # CONFIG_PLAT_BCM2837 is not set
-# CONFIG_ENABLE_A9_PREFETCHER is not set
+CONFIG_ENABLE_A9_PREFETCHER=y
 CONFIG_EXPORT_PMU_USER=y
 # CONFIG_IPC_BUF_GLOBALS_FRAME is not set
 CONFIG_IPC_BUF_TPIDRURW=y
@@ -97,6 +97,8 @@ CONFIG_NO_BENCHMARKS=y
 # CONFIG_BENCHMARK_TRACEPOINTS is not set
 # CONFIG_BENCHMARK_TRACK_UTILISATION is not set
 # CONFIG_MULTI_KERNEL_IMAGES is not set
+# CONFIG_KERNEL_SWITCH_COST_BENCH is not set
+# CONFIG_ENABLE_GLOBAL_TIMER is not set
 
 #
 # Errata
@@ -126,6 +128,7 @@ CONFIG_BENCH_COVERT=y
 CONFIG_BENCH_COVERT_LLC_KERNEL=y
 CONFIG_BENCH_DATA_POINTS=1024000
 # CONFIG_MASTIK_ATTACK is not set
+# CONFIG_BENCH_SPLASH is not set
 
 #
 # Manager task for benchmarking tests
@@ -134,11 +137,16 @@ CONFIG_APP_MANAGER=y
 CONFIG_BENCH_UNTYPE_COUNT=40
 CONFIG_BENCH_UNTYPE_SIZEBITS=14
 # CONFIG_MANAGER_MITIGATION is not set
+# CONFIG_MANAGER_COLOUR_ONLY is not set
+# CONFIG_MANAGER_UNCOLOUR_KERNEL is not set
 # CONFIG_MANAGER_IPC is not set
+# CONFIG_MANAGER_CACHE_DIV_UNEVEN is not set
+# CONFIG_MANAGER_CACHE_DIV_LLC is not set
 # CONFIG_MANAGER_PMU_COUNTER is not set
 # CONFIG_MANAGER_CACHE_FLUSH is not set
 # CONFIG_MANAGER_FUNC_TESTS is not set
 CONFIG_MANAGER_COVERT_BENCH=y
+# CONFIG_MANAGER_SPLASH_BENCH is not set
 # CONFIG_MANAGER_DCACHE_ATTACK is not set
 # CONFIG_MANAGER_HUGE_PAGES is not set
 
