defconfig splash with domain switch sabre haswell

--- a/configs/haswell_splash_ocean_switch_defconfig
+++ b/configs/haswell_splash_ocean_switch_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Project Configuration
-# Thu Sep 20 16:29:52 2018
+# Tue Sep 25 14:33:32 2018
 #
 
 #
@@ -75,7 +75,7 @@ CONFIG_KERNEL_X86_IBRS_NONE=y
 # seL4 System Parameters
 #
 CONFIG_ROOT_CNODE_SIZE_BITS=19
-CONFIG_TIMER_TICK_MS=100
+CONFIG_TIMER_TICK_MS=10
 CONFIG_TIME_SLICE=1
 CONFIG_RETYPE_FAN_OUT_LIMIT=256
 CONFIG_MAX_NUM_WORK_UNITS_PER_PREEMPTION=100
