--- a/configs/haswell_splash_radiosity_kernel_colour_switch_hold_defconfig
+++ b/configs/haswell_splash_radiosity_kernel_colour_switch_hold_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Project Configuration
-# Thu Sep 20 16:56:58 2018
+# Tue Sep 25 14:54:42 2018
 #
 
 #
@@ -75,7 +75,7 @@ CONFIG_KERNEL_X86_RSB_ON_CONTEXT_SWITCH=y
 # seL4 System Parameters
 #
 CONFIG_ROOT_CNODE_SIZE_BITS=19
-CONFIG_TIMER_TICK_MS=100
+CONFIG_TIMER_TICK_MS=10
 CONFIG_TIME_SLICE=1
 CONFIG_RETYPE_FAN_OUT_LIMIT=256
 CONFIG_MAX_NUM_WORK_UNITS_PER_PREEMPTION=100
@@ -104,7 +104,7 @@ CONFIG_OPTIMISATION_O2=y
 # CONFIG_OPTIMISATION_O3 is not set
 CONFIG_DANGEROUS_CODE_INJECTION=y
 # CONFIG_FLUSH_CORE_STATES is not set
-CONFIG_DEBUG_DISABLE_PREFETCHERS=y
+# CONFIG_DEBUG_DISABLE_PREFETCHERS is not set
 # CONFIG_ENABLE_BENCHMARKS is not set
 CONFIG_NO_BENCHMARKS=y
 # CONFIG_BENCHMARK_GENERIC is not set
@@ -114,7 +114,8 @@ CONFIG_NO_BENCHMARKS=y
 CONFIG_MULTI_KERNEL_IMAGES=y
 CONFIG_KERNEL_SWITCH_FLUSH=y
 # CONFIG_FLUSH_CACHE_L1_DCACHE_WRITE is not set
-# CONFIG_DETERMINISTIC_KERNEL_SWITCH is not set
+CONFIG_DETERMINISTIC_KERNEL_SWITCH=y
+CONFIG_KERNEL_HOLD_TICK_LENGTH=34200
 CONFIG_LOAD_KERNEL_SHARED_DATA=y
 CONFIG_KERNEL_INT_MASK=y
 # CONFIG_KERNEL_SWITCH_COST_BENCH is not set
@@ -144,9 +145,9 @@ CONFIG_BENCH_SPLASH=y
 # CONFIG_BENCH_SPLASH_LU is not set
 # CONFIG_BENCH_SPLASH_RADIX is not set
 # CONFIG_BENCH_SPLASH_BARNES is not set
-CONFIG_BENCH_SPLASH_FMM=y
+# CONFIG_BENCH_SPLASH_FMM is not set
 # CONFIG_BENCH_SPLASH_OCEAN is not set
-# CONFIG_BENCH_SPLASH_RADIOSITY is not set
+CONFIG_BENCH_SPLASH_RADIOSITY=y
 # CONFIG_BENCH_SPLASH_RAYTRACE is not set
 # CONFIG_BENCH_SPLASH_WATER_NSQUARED is not set
 # CONFIG_BENCH_SPLASH_WATER_SPATIAL is not set
