--- a/configs/haswell_splash_radiosity_kernel_uneven_switch_defconfig
+++ b/configs/haswell_splash_radiosity_kernel_uneven_switch_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Project Configuration
-# Thu Sep 20 17:17:14 2018
+# Tue Sep 25 14:41:02 2018
 #
 
 #
@@ -75,7 +75,7 @@ CONFIG_KERNEL_X86_RSB_ON_CONTEXT_SWITCH=y
 # seL4 System Parameters
 #
 CONFIG_ROOT_CNODE_SIZE_BITS=19
-CONFIG_TIMER_TICK_MS=100
+CONFIG_TIMER_TICK_MS=10
 CONFIG_TIME_SLICE=1
 CONFIG_RETYPE_FAN_OUT_LIMIT=256
 CONFIG_MAX_NUM_WORK_UNITS_PER_PREEMPTION=100
@@ -104,7 +104,7 @@ CONFIG_OPTIMISATION_O2=y
 # CONFIG_OPTIMISATION_O3 is not set
 CONFIG_DANGEROUS_CODE_INJECTION=y
 # CONFIG_FLUSH_CORE_STATES is not set
-CONFIG_DEBUG_DISABLE_PREFETCHERS=y
+# CONFIG_DEBUG_DISABLE_PREFETCHERS is not set
 # CONFIG_ENABLE_BENCHMARKS is not set
 CONFIG_NO_BENCHMARKS=y
 # CONFIG_BENCHMARK_GENERIC is not set
