minor updating configus

--- a/configs/sabre_ipc_intra_colour_defconfig
+++ b/configs/sabre_ipc_intra_colour_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Project Configuration
-# Tue Sep 18 14:16:45 2018
+# Thu Sep 27 10:37:30 2018
 #
 
 #
@@ -59,7 +59,7 @@ CONFIG_IPC_BUF_TPIDRURW=y
 # seL4 System Parameters
 #
 CONFIG_ROOT_CNODE_SIZE_BITS=19
-CONFIG_TIMER_TICK_MS=1
+CONFIG_TIMER_TICK_MS=1000
 CONFIG_TIME_SLICE=1
 CONFIG_RETYPE_FAN_OUT_LIMIT=256
 CONFIG_MAX_NUM_WORK_UNITS_PER_PREEMPTION=100
