updating the timer timing channel benchmark

--- a/configs/sabre_timer_covert_defconfig
+++ b/configs/sabre_timer_covert_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Project Configuration
-# Thu Jun 28 15:00:09 2018
+# Thu Nov 29 14:46:03 2018
 #
 
 #
@@ -99,8 +99,11 @@ CONFIG_NO_BENCHMARKS=y
 CONFIG_MULTI_KERNEL_IMAGES=y
 CONFIG_KERNEL_SWITCH_FLUSH=y
 CONFIG_DETERMINISTIC_KERNEL_SWITCH=y
-CONFIG_KERNEL_HOLD_TICK_LENGTH=850
-# CONFIG_LOAD_KERNEL_SHARED_DATA is not set
+CONFIG_KERNEL_HOLD_TICK_LENGTH=8500
+CONFIG_LOAD_KERNEL_SHARED_DATA=y
+# CONFIG_KERNEL_INT_MASK is not set
+# CONFIG_KERNEL_SWITCH_COST_BENCH is not set
+# CONFIG_ENABLE_GLOBAL_TIMER is not set
 
 #
 # Errata
@@ -127,8 +130,10 @@ CONFIG_BENCH_COVERT=y
 # CONFIG_BENCH_COVERT_BTB is not set
 # CONFIG_BENCH_COVERT_BP is not set
 CONFIG_BENCH_COVERT_TIMER=y
-CONFIG_BENCH_DATA_POINTS=100
+# CONFIG_BENCH_COVERT_LLC_KERNEL is not set
+CONFIG_BENCH_DATA_POINTS=100000
 # CONFIG_MASTIK_ATTACK is not set
+# CONFIG_BENCH_SPLASH is not set
 
 #
 # Manager task for benchmarking tests
@@ -137,11 +142,16 @@ CONFIG_APP_MANAGER=y
 CONFIG_BENCH_UNTYPE_COUNT=40
 CONFIG_BENCH_UNTYPE_SIZEBITS=14
 CONFIG_MANAGER_MITIGATION=y
+# CONFIG_MANAGER_COLOUR_ONLY is not set
+# CONFIG_MANAGER_UNCOLOUR_KERNEL is not set
 # CONFIG_MANAGER_IPC is not set
+# CONFIG_MANAGER_CACHE_DIV_UNEVEN is not set
+# CONFIG_MANAGER_CACHE_DIV_LLC is not set
 # CONFIG_MANAGER_PMU_COUNTER is not set
 # CONFIG_MANAGER_CACHE_FLUSH is not set
 # CONFIG_MANAGER_FUNC_TESTS is not set
 CONFIG_MANAGER_COVERT_BENCH=y
+# CONFIG_MANAGER_SPLASH_BENCH is not set
 # CONFIG_MANAGER_DCACHE_ATTACK is not set
 # CONFIG_MANAGER_HUGE_PAGES is not set
 
