--- a/configs/sabre_timer_covert_mask_defconfig
+++ b/configs/sabre_timer_covert_mask_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Project Configuration
-# Sun Jul  1 20:13:37 2018
+# Thu Nov 29 14:55:44 2018
 #
 
 #
@@ -50,7 +50,7 @@ CONFIG_PLAT_SABRE=y
 # CONFIG_PLAT_TK1 is not set
 # CONFIG_PLAT_HIKEY is not set
 # CONFIG_PLAT_BCM2837 is not set
-# CONFIG_ENABLE_A9_PREFETCHER is not set
+CONFIG_ENABLE_A9_PREFETCHER=y
 CONFIG_EXPORT_PMU_USER=y
 # CONFIG_IPC_BUF_GLOBALS_FRAME is not set
 CONFIG_IPC_BUF_TPIDRURW=y
@@ -99,10 +99,11 @@ CONFIG_NO_BENCHMARKS=y
 CONFIG_MULTI_KERNEL_IMAGES=y
 CONFIG_KERNEL_SWITCH_FLUSH=y
 CONFIG_DETERMINISTIC_KERNEL_SWITCH=y
-CONFIG_KERNEL_HOLD_TICK_LENGTH=8100
+CONFIG_KERNEL_HOLD_TICK_LENGTH=8500
 CONFIG_LOAD_KERNEL_SHARED_DATA=y
-# CONFIG_INT_TASK_PRIORITY is not set
 CONFIG_KERNEL_INT_MASK=y
+# CONFIG_KERNEL_SWITCH_COST_BENCH is not set
+# CONFIG_ENABLE_GLOBAL_TIMER is not set
 
 #
 # Errata
@@ -129,8 +130,10 @@ CONFIG_BENCH_COVERT=y
 # CONFIG_BENCH_COVERT_BTB is not set
 # CONFIG_BENCH_COVERT_BP is not set
 CONFIG_BENCH_COVERT_TIMER=y
-CONFIG_BENCH_DATA_POINTS=100
+# CONFIG_BENCH_COVERT_LLC_KERNEL is not set
+CONFIG_BENCH_DATA_POINTS=100000
 # CONFIG_MASTIK_ATTACK is not set
+# CONFIG_BENCH_SPLASH is not set
 
 #
 # Manager task for benchmarking tests
@@ -139,11 +142,16 @@ CONFIG_APP_MANAGER=y
 CONFIG_BENCH_UNTYPE_COUNT=40
 CONFIG_BENCH_UNTYPE_SIZEBITS=14
 CONFIG_MANAGER_MITIGATION=y
+# CONFIG_MANAGER_COLOUR_ONLY is not set
+# CONFIG_MANAGER_UNCOLOUR_KERNEL is not set
 # CONFIG_MANAGER_IPC is not set
+# CONFIG_MANAGER_CACHE_DIV_UNEVEN is not set
+# CONFIG_MANAGER_CACHE_DIV_LLC is not set
 # CONFIG_MANAGER_PMU_COUNTER is not set
 # CONFIG_MANAGER_CACHE_FLUSH is not set
 # CONFIG_MANAGER_FUNC_TESTS is not set
 CONFIG_MANAGER_COVERT_BENCH=y
+# CONFIG_MANAGER_SPLASH_BENCH is not set
 # CONFIG_MANAGER_DCACHE_ATTACK is not set
 # CONFIG_MANAGER_HUGE_PAGES is not set
 
