update config timer timing channel haswell

--- a/configs/haswell_timer_defconfig
+++ b/configs/haswell_timer_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Project Configuration
-# Fri Jun 15 16:31:43 2018
+# Thu Nov 29 17:39:07 2018
 #
 
 #
@@ -65,11 +65,11 @@ CONFIG_MULTIBOOT_GRAPHICS_MODE_NONE=y
 # CONFIG_KERNEL_SKIM_WINDOW is not set
 # CONFIG_EXPORT_PMC_USER is not set
 # CONFIG_KERNEL_X86_DANGEROUS_MSR is not set
-CONFIG_KERNEL_X86_IBRS_NONE=y
-# CONFIG_KERNEL_X86_IBRS_BASIC is not set
+# CONFIG_KERNEL_X86_IBRS_NONE is not set
+CONFIG_KERNEL_X86_IBRS_BASIC=y
 # CONFIG_KERNEL_X86_IBRS_ALL is not set
-# CONFIG_KERNEL_X86_IBPB_ON_CONTEXT_SWITCH is not set
-# CONFIG_KERNEL_X86_RSB_ON_CONTEXT_SWITCH is not set
+CONFIG_KERNEL_X86_IBPB_ON_CONTEXT_SWITCH=y
+CONFIG_KERNEL_X86_RSB_ON_CONTEXT_SWITCH=y
 
 #
 # seL4 System Parameters
@@ -114,10 +114,10 @@ CONFIG_NO_BENCHMARKS=y
 CONFIG_MULTI_KERNEL_IMAGES=y
 CONFIG_KERNEL_SWITCH_FLUSH=y
 # CONFIG_FLUSH_CACHE_L1_DCACHE_WRITE is not set
-# CONFIG_DETERMINISTIC_KERNEL_SWITCH is not set
-# CONFIG_LOAD_KERNEL_SHARED_DATA is not set
-# CONFIG_INT_TASK_PRIORITY is not set
-CONFIG_KERNEL_INT_MASK=y
+CONFIG_DETERMINISTIC_KERNEL_SWITCH=y
+CONFIG_KERNEL_HOLD_TICK_LENGTH=34200
+CONFIG_LOAD_KERNEL_SHARED_DATA=y
+# CONFIG_KERNEL_INT_MASK is not set
 # CONFIG_KERNEL_SWITCH_COST_BENCH is not set
 
 #
@@ -146,23 +146,28 @@ CONFIG_BENCH_COVERT=y
 # CONFIG_BENCH_COVERT_BP is not set
 CONFIG_BENCH_COVERT_TIMER=y
 # CONFIG_BENCH_COVERT_LLC_KERNEL is not set
-CONFIG_BENCH_DATA_POINTS=100
+CONFIG_BENCH_DATA_POINTS=100000
 # CONFIG_MASTIK_ATTACK is not set
+# CONFIG_BENCH_SPLASH is not set
 
 #
 # Manager task for benchmarking tests
 #
 CONFIG_APP_MANAGER=y
-CONFIG_BENCH_UNTYPE_COUNT=8
+CONFIG_BENCH_UNTYPE_COUNT=40
 CONFIG_BENCH_UNTYPE_SIZEBITS=14
-# CONFIG_MANAGER_MITIGATION is not set
+CONFIG_MANAGER_MITIGATION=y
+# CONFIG_MANAGER_COLOUR_ONLY is not set
+# CONFIG_MANAGER_UNCOLOUR_KERNEL is not set
 # CONFIG_MANAGER_IPC is not set
+# CONFIG_MANAGER_CACHE_DIV_UNEVEN is not set
+# CONFIG_MANAGER_CACHE_DIV_LLC is not set
 # CONFIG_MANAGER_PMU_COUNTER is not set
 # CONFIG_MANAGER_CACHE_FLUSH is not set
 # CONFIG_MANAGER_FUNC_TESTS is not set
 CONFIG_MANAGER_COVERT_BENCH=y
+# CONFIG_MANAGER_SPLASH_BENCH is not set
 # CONFIG_MANAGER_DCACHE_ATTACK is not set
-# CONFIG_MANAGER_COVERT_MULTI is not set
 # CONFIG_MANAGER_HUGE_PAGES is not set
 
 #
@@ -182,7 +187,7 @@ CONFIG_LIB_MUSL_C=y
 CONFIG_HAVE_LIBC=y
 CONFIG_HAVE_CRT=y
 CONFIG_LIB_SEL4_MUSLC_SYS=y
-CONFIG_LIB_SEL4_MUSLC_SYS_MORECORE_BYTES=8388608
+CONFIG_LIB_SEL4_MUSLC_SYS_MORECORE_BYTES=41943040
 # CONFIG_LIB_SEL4_MUSLC_SYS_DEBUG_HALT is not set
 # CONFIG_LIB_SEL4_MUSLC_SYS_CPIO_FS is not set
 # CONFIG_LIB_SEL4_MUSLC_SYS_ARCH_PUTCHAR_WEAK is not set
@@ -230,7 +235,7 @@ CONFIG_HAVE_LIB_PLATSUPPORT=y
 CONFIG_LIB_SEL4_CACHECOLOURING=y
 CONFIG_NUM_CACHE_COLOURS=8
 CONFIG_COLOUR_ALLOC_SIZEBITS=15
-CONFIG_COLOUR_MSPACE_RESERVES=100
+CONFIG_COLOUR_MSPACE_RESERVES=30
 CONFIG_LIB_SEL4_DEBUG=y
 CONFIG_LIBSEL4DEBUG_ALLOC_BUFFER_ENTRIES=128
 CONFIG_LIBSEL4DEBUG_FUNCTION_INSTRUMENTATION_NONE=y
