updating splash switch benchmark 10ms idle

--- a/configs/haswell_splash_waternsquared_switch_defconfig
+++ b/configs/haswell_splash_waternsquared_switch_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Project Configuration
-# Thu Sep 20 16:30:41 2018
+# Tue Jan 29 13:17:14 2019
 #
 
 #
@@ -75,7 +75,7 @@ CONFIG_KERNEL_X86_IBRS_NONE=y
 # seL4 System Parameters
 #
 CONFIG_ROOT_CNODE_SIZE_BITS=19
-CONFIG_TIMER_TICK_MS=100
+CONFIG_TIMER_TICK_MS=10
 CONFIG_TIME_SLICE=1
 CONFIG_RETYPE_FAN_OUT_LIMIT=256
 CONFIG_MAX_NUM_WORK_UNITS_PER_PREEMPTION=100
@@ -133,6 +133,7 @@ CONFIG_APP_SIDE_BENCH=y
 # CONFIG_BENCH_COVERT is not set
 # CONFIG_MASTIK_ATTACK is not set
 CONFIG_BENCH_SPLASH_MORECORE=y
+CONFIG_BENCH_SPLASH_SWITCH_IDLE=y
 CONFIG_BENCH_SPLASH=y
 # CONFIG_BENCH_SPLASH_FFT is not set
 # CONFIG_BENCH_SPLASH_CHOLESKY is not set
