--- a/configs/haswell_splash_waternsquared_kernel_uneven_switch_defconfig
+++ b/configs/haswell_splash_waternsquared_kernel_uneven_switch_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Project Configuration
-# Thu Sep 20 17:17:44 2018
+# Tue Jan 29 14:19:59 2019
 #
 
 #
@@ -75,7 +75,7 @@ CONFIG_KERNEL_X86_RSB_ON_CONTEXT_SWITCH=y
 # seL4 System Parameters
 #
 CONFIG_ROOT_CNODE_SIZE_BITS=19
-CONFIG_TIMER_TICK_MS=100
+CONFIG_TIMER_TICK_MS=10
 CONFIG_TIME_SLICE=1
 CONFIG_RETYPE_FAN_OUT_LIMIT=256
 CONFIG_MAX_NUM_WORK_UNITS_PER_PREEMPTION=100
@@ -104,7 +104,7 @@ CONFIG_OPTIMISATION_O2=y
 # CONFIG_OPTIMISATION_O3 is not set
 CONFIG_DANGEROUS_CODE_INJECTION=y
 # CONFIG_FLUSH_CORE_STATES is not set
-CONFIG_DEBUG_DISABLE_PREFETCHERS=y
+# CONFIG_DEBUG_DISABLE_PREFETCHERS is not set
 # CONFIG_ENABLE_BENCHMARKS is not set
 CONFIG_NO_BENCHMARKS=y
 # CONFIG_BENCHMARK_GENERIC is not set
@@ -138,6 +138,7 @@ CONFIG_APP_SIDE_BENCH=y
 # CONFIG_BENCH_COVERT is not set
 # CONFIG_MASTIK_ATTACK is not set
 CONFIG_BENCH_SPLASH_MORECORE=y
+CONFIG_BENCH_SPLASH_SWITCH_IDLE=y
 CONFIG_BENCH_SPLASH=y
 # CONFIG_BENCH_SPLASH_FFT is not set
 # CONFIG_BENCH_SPLASH_CHOLESKY is not set
