--- a/configs/haswell_splash_fmm_kernel_uneven_switch_hold_defconfig
+++ b/configs/haswell_splash_fmm_kernel_uneven_switch_hold_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Project Configuration
-# Tue Jan 29 15:01:35 2019
+# Tue Jan 29 15:01:15 2019
 #
 
 #
@@ -146,9 +146,9 @@ CONFIG_BENCH_SPLASH=y
 # CONFIG_BENCH_SPLASH_LU is not set
 # CONFIG_BENCH_SPLASH_RADIX is not set
 # CONFIG_BENCH_SPLASH_BARNES is not set
-# CONFIG_BENCH_SPLASH_FMM is not set
+CONFIG_BENCH_SPLASH_FMM=y
 # CONFIG_BENCH_SPLASH_OCEAN is not set
-CONFIG_BENCH_SPLASH_RADIOSITY=y
+# CONFIG_BENCH_SPLASH_RADIOSITY is not set
 # CONFIG_BENCH_SPLASH_RAYTRACE is not set
 # CONFIG_BENCH_SPLASH_WATER_NSQUARED is not set
 # CONFIG_BENCH_SPLASH_WATER_SPATIAL is not set
