--- a/configs/sabre_splash_fft_switch_defconfig
+++ b/configs/sabre_splash_fft_switch_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Project Configuration
-# Wed Jan 30 13:46:24 2019
+# Wed Jan 30 13:44:18 2019
 #
 
 #
@@ -121,7 +121,7 @@ CONFIG_APP_SIDE_BENCH=y
 CONFIG_BENCH_SPLASH_MORECORE=y
 CONFIG_BENCH_SPLASH_SWITCH_IDLE=y
 CONFIG_BENCH_SPLASH=y
-# CONFIG_BENCH_SPLASH_FFT is not set
+CONFIG_BENCH_SPLASH_FFT=y
 # CONFIG_BENCH_SPLASH_CHOLESKY is not set
 # CONFIG_BENCH_SPLASH_LU is not set
 # CONFIG_BENCH_SPLASH_RADIX is not set
@@ -129,7 +129,7 @@ CONFIG_BENCH_SPLASH=y
 # CONFIG_BENCH_SPLASH_FMM is not set
 # CONFIG_BENCH_SPLASH_OCEAN is not set
 # CONFIG_BENCH_SPLASH_RADIOSITY is not set
-CONFIG_BENCH_SPLASH_RAYTRACE=y
+# CONFIG_BENCH_SPLASH_RAYTRACE is not set
 # CONFIG_BENCH_SPLASH_WATER_NSQUARED is not set
 # CONFIG_BENCH_SPLASH_WATER_SPATIAL is not set
 
