--- a/configs/sabre_splash_fmm_switch_defconfig
+++ b/configs/sabre_splash_fmm_switch_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Project Configuration
-# Wed Jan 30 13:46:24 2019
+# Wed Jan 30 13:45:31 2019
 #
 
 #
@@ -126,10 +126,10 @@ CONFIG_BENCH_SPLASH=y
 # CONFIG_BENCH_SPLASH_LU is not set
 # CONFIG_BENCH_SPLASH_RADIX is not set
 # CONFIG_BENCH_SPLASH_BARNES is not set
-# CONFIG_BENCH_SPLASH_FMM is not set
+CONFIG_BENCH_SPLASH_FMM=y
 # CONFIG_BENCH_SPLASH_OCEAN is not set
 # CONFIG_BENCH_SPLASH_RADIOSITY is not set
-CONFIG_BENCH_SPLASH_RAYTRACE=y
+# CONFIG_BENCH_SPLASH_RAYTRACE is not set
 # CONFIG_BENCH_SPLASH_WATER_NSQUARED is not set
 # CONFIG_BENCH_SPLASH_WATER_SPATIAL is not set
 
