--- a/configs/sabre_splash_fft_kernel_colour_switch_defconfig
+++ b/configs/sabre_splash_fft_kernel_colour_switch_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Project Configuration
-# Wed Jan 30 14:10:59 2019
+# Wed Jan 30 14:08:46 2019
 #
 
 #
@@ -125,7 +125,7 @@ CONFIG_APP_SIDE_BENCH=y
 CONFIG_BENCH_SPLASH_MORECORE=y
 CONFIG_BENCH_SPLASH_SWITCH_IDLE=y
 CONFIG_BENCH_SPLASH=y
-# CONFIG_BENCH_SPLASH_FFT is not set
+CONFIG_BENCH_SPLASH_FFT=y
 # CONFIG_BENCH_SPLASH_CHOLESKY is not set
 # CONFIG_BENCH_SPLASH_LU is not set
 # CONFIG_BENCH_SPLASH_RADIX is not set
@@ -133,7 +133,7 @@ CONFIG_BENCH_SPLASH=y
 # CONFIG_BENCH_SPLASH_FMM is not set
 # CONFIG_BENCH_SPLASH_OCEAN is not set
 # CONFIG_BENCH_SPLASH_RADIOSITY is not set
-CONFIG_BENCH_SPLASH_RAYTRACE=y
+# CONFIG_BENCH_SPLASH_RAYTRACE is not set
 # CONFIG_BENCH_SPLASH_WATER_NSQUARED is not set
 # CONFIG_BENCH_SPLASH_WATER_SPATIAL is not set
 
