--- a/configs/sabre_splash_lu_kernel_colour_switch_hold_defconfig
+++ b/configs/sabre_splash_lu_kernel_colour_switch_hold_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Project Configuration
-# Tue Sep 25 14:30:26 2018
+# Wed Jan 30 14:15:10 2019
 #
 
 #
@@ -124,6 +124,7 @@ CONFIG_APP_SIDE_BENCH=y
 # CONFIG_BENCH_COVERT is not set
 # CONFIG_MASTIK_ATTACK is not set
 CONFIG_BENCH_SPLASH_MORECORE=y
+CONFIG_BENCH_SPLASH_SWITCH_IDLE=y
 CONFIG_BENCH_SPLASH=y
 # CONFIG_BENCH_SPLASH_FFT is not set
 # CONFIG_BENCH_SPLASH_CHOLESKY is not set
