--- a/configs/sabre_splash_fft_kernel_uneven_switch_hold_defconfig
+++ b/configs/sabre_splash_fft_kernel_uneven_switch_hold_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Project Configuration
-# Thu Jan 31 11:22:21 2019
+# Thu Jan 31 11:20:30 2019
 #
 
 #
@@ -126,7 +126,7 @@ CONFIG_APP_SIDE_BENCH=y
 CONFIG_BENCH_SPLASH_MORECORE=y
 CONFIG_BENCH_SPLASH_SWITCH_IDLE=y
 CONFIG_BENCH_SPLASH=y
-# CONFIG_BENCH_SPLASH_FFT is not set
+CONFIG_BENCH_SPLASH_FFT=y
 # CONFIG_BENCH_SPLASH_CHOLESKY is not set
 # CONFIG_BENCH_SPLASH_LU is not set
 # CONFIG_BENCH_SPLASH_RADIX is not set
@@ -134,7 +134,7 @@ CONFIG_BENCH_SPLASH=y
 # CONFIG_BENCH_SPLASH_FMM is not set
 # CONFIG_BENCH_SPLASH_OCEAN is not set
 # CONFIG_BENCH_SPLASH_RADIOSITY is not set
-CONFIG_BENCH_SPLASH_RAYTRACE=y
+# CONFIG_BENCH_SPLASH_RAYTRACE is not set
 # CONFIG_BENCH_SPLASH_WATER_NSQUARED is not set
 # CONFIG_BENCH_SPLASH_WATER_SPATIAL is not set
 
