riscv: new btb and bht attacks

--- a/apps/side-bench/CMakeLists.txt
+++ b/apps/side-bench/CMakeLists.txt
@@ -31,6 +31,42 @@ config_option(
 	OFF
 )
 
+config_string(
+	BenchBTBEntries
+	BENCH_BTB_ENTRIES
+	"Number of entries in BTB"
+	DEFAULT
+	16
+	UNQUOTE
+)
+
+config_string(
+	BenchBTBAlign
+	BENCH_BTB_ALIGN
+	"Alignment of indirect branch instructions (bytes). This should guarantee iterating over all BTB indices."
+	DEFAULT
+	20
+	UNQUOTE
+)
+
+config_string(
+	BenchBHTEntries
+	BENCH_BHT_ENTRIES
+	"Number of entries in BHT"
+	DEFAULT
+	64
+	UNQUOTE
+)
+
+config_string(
+	BenchBHTAlign
+	BENCH_BHT_ALIGN
+	"Alignment of conditional branch instructions (bytes). This should guarantee iterating over all BHT indices."
+	DEFAULT
+	20
+	UNQUOTE
+)
+
 config_choice(
 	BenchCacheFlushChoice
 	BENCH_CACHE_FLUSH_CHOICE
