Enable cache colouring
Signed-off-by: Nils Wistoff <nwistoff@iis.ee.ethz.ch>

--- a/apps/manager/CMakeLists.txt
+++ b/apps/manager/CMakeLists.txt
@@ -19,6 +19,13 @@ set(configure_string "")
 
 # App-specific settings
 
+config_option(
+	LibSel4CacheColouring
+	LIB_SEL4_CACHECOLOURING
+	"Enable cache colouring"
+    DEFAULT OFF
+)
+
 config_string(
 	BenchUntypeCount
 	BENCH_UNTYPE_COUNT
